# opc-study

./: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  book.json  index.html  search_index.json  search_plus_index.json
ai/: chapter02.py  chapter02_2.py  chapter04.py  chapter04_2.py  chapter05.py  chapter05_2.py  chapter06.py  chapter07.py  chapter07_2.py  chapter10_create.py  chapter10_load.py  chapter10_tencent.py  chapter11_create.py  chapter11_load.py  chapter14.py  chapter15.py  chapter16.py  chapter17.py  chapter17_2.py  chapter17_3.py  chapter18.py  chapter19.py  chapter21_did.py  chapter21_gradio_audio.py  chatplug_240m.py  chatplug_raw.py  gradio_chatplug.py  util.py  visual_chatgpt.py
ai/data/: ultraman_stories.csv  ultraman_stories_more.csv
ai/data/index_mr_fujino/: default__vector_store.json  docstore.json  index_store.json
algorithm/src/: ArrayCircularQueue.java  ArrayQueue.java  ArrayStack.java  CountingSort.java  DynamicProgramming.java  HeapSort.java  Knapsack.java  MergeSort.java  QuickSort.java  QuickSortTopK.java  RadixSort.java  SingleLinkedList.java  SkipList.java  SkipList2.java  TreePrint.java
bpf/: Makefile  bpf_bash_readline.py  bpf_perf_output.py  bpf_trace_printk.py  dropwatch.bt  sockops.bpf.c  sockops.h  sockredir.bpf.c
cpp/Database/: main.c
cpp/Decorator/: ConcreteDecoratorA.cpp  ConcreteDecoratorB.cpp  main.cpp
cpp/Facade/: Facade.cpp  Facade.h  SystemA.cpp  SystemB.cpp  SystemC.cpp  main.cpp
cpp/Observer/: ConcreteObserver.cpp  ConcreteObserver.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
cpp/Redis/: main.c  main.cpp  redisassert.h  ziplist.c  zmalloc.c  zmalloc.h
cpp/State/: ConcreteStateA.cpp  ConcreteStateB.cpp  main.cpp
cpp/Strategy/: ConcreteStrategyA.cpp  ConcreteStrategyB.cpp  main.cpp
cpp/main/: main.c
docs/: 1.html  1.md  2.html  3.html  3.md  4.html  4.md  41.html  41.md  42.html  42.md  43.html  43.md  44.html  5.html  5.md  51.html  51.md  52.html  52.md  6.html  6.md  61.html  61.md  62.html  62.md  63.html  63.md  64.html  64.md  65.html  65.md  7.html  7.md  71.html  72.html  72.md  81.html  81.md  82.html  (+67 more)
headfirstdesignpatterns/src/headfirst/adapter/iterenum/: EI.java  EnumerationIteratorTestDrive.java  IteratorEnumerationTestDrive.java
headfirstdesignpatterns/src/headfirst/command/remote/: GarageDoorDownCommand.java  RemoteLoader.java
headfirstdesignpatterns/src/headfirst/command/simpleremote/: RemoteControlTest.java
headfirstdesignpatterns/src/headfirst/facade/hometheater/: HomeTheaterTestDrive.java
liuer/: Myself-forecast.py  Myself-forecast.xls  diabetes.csv  image2tensor.py  lesson.py  lesson10.py  lesson11.py  lesson11_2.py  lesson12.py  lesson12_2.py  lesson12_3.py  lesson13.py  lesson13_2.py  lesson13_3.py  lesson2.py  lesson2_2.py  lesson3.py  lesson3_2.py  lesson4.py  lesson4_1.py  lesson4_2.py  lesson4_3.py  lesson5.py  lesson6.py  lesson6_1.py  lesson6_2.py  lesson7.py  lesson7_1.py  lesson8.py  lesson9.py  lesson9_bernoulli.py  lesson9_gaussian.py  lesson9_pure.py  lesson9_sklearn.py  normalize.py  redPacket.csv  redPacket.py  redPacket_2.csv  redPacket_2.py  redPacket_3.py  (+12 more)
php/: LaravelEloquentTest.php  Singleton.php
php/Algorithm/: BinarySearch.php  BubbleSort.php  InsertionSort.php  MergeSort.php  QuickSort.php
php/DesignPattern/: Command.php  State.php
print/faqs/: 4.rds.html  7.vpc.html  8.route53.html  9.sqs.html  all.html
python-ai/: example01.txt  example01.xlsx
python/linear-algebra/: matrix.py
saa-c02/faqs/: 1.ec2.html  2.asg.html  3.ebs.html  5.aurora.html  6.s3.html  faqs.html
src/: ae.c  ae_select.c  networking.c  rdb.c  redis.c  release.h  sds.c  sds.h
src/test/: sds_test.c
